fix overflow problem

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,8 +2,8 @@
   text-align: left;
   max-height: 100vh;
   width: 100vw;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  overflow: hidden;
 }
 
 .nav {
